--- a/src/index.css
+++ b/src/index.css
@@ -1,128 +1,10 @@
 body {
-  background: linear-gradient(to bottom, #2c3e50, #4ca1af);
+  background: linear-gradient(to bottom, rgb(255, 246, 240), rgb(255, 246, 240));
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   height: 100vh;
   margin: 0;
-  flex-direction: column;
-}
 
-/* Formulario */
-.form-box {
-  background-color: white;
-  padding: 32px;
-  border-radius: 12px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-  width: 100%;
-  max-width: 400px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  border: 2px solid #000000;
-  animation: floatLoop 3s ease-in-out infinite;
-}
-
-label {
-  font-size: 20px;
-}
-
-input {
-  width: 100%;
-  padding: 8px;
-  border-radius: 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-}
-
-input[type="submit"] {
-  width: auto;
-  min-width: 100px;
-  background-color: #377539;
-  color: white;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.boton-principal {
-  width: auto;
-  min-width: 100px;
-  background-color: #377539;
-  color: white;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-family: inherit;
-  font-size: 16px;
-}
-
-button.reset {
-  font-family: inherit;
-  width: auto;
-  min-width: 100px;
-  background-color: #000000;
-  color: white;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.link a {
-  color: #007bff;
-  text-decoration: underline;
-}
-
-.link a:hover {
-  color: #0056b3;
-}
-
-.button-group {
-  margin-top: 16px;
-  display: flex;
-  justify-content: space-between;
-  gap: 3px;
-}
-
-@keyframes floatLoop {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-/* Inicio de sesión */
-.inicio-container {
-  margin-top: 100px;
-  text-align: center;
-  background-color: white;
-  padding: 48px;
-  border-radius: 12px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.inicio-container h2 {
-  font-size: 32px;
-  color: #061a1b;
-  margin-bottom: 16px;
-}
-
-.inicio-container p {
-  font-size: 19.2px;
-  color: #444;
 }
 
 /* Navbar */
@@ -134,14 +16,14 @@ nav {
   width: 100%;
   height: 30px;
   justify-content: space-evenly;
-  background-color: white;
+  background-color: #FFD4E0;
   text-decoration: none;
   padding: 10px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 15px #835d68c9;
 }
 
 nav a:hover {
-  background-color: rgba(0, 0, 0, 0.1); /* fondo suave gris */
+  background-color: rgba(255, 0, 0, 0.1); /* fondo suave gris */
   padding: 6px 2px;                    /* espacio interior */
   border-radius: 10px;                 /* hace el fondo totalmente redondo */
   transition: all 0.2s ease-in-out;     /* animación suave */
@@ -164,7 +46,7 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
-  background-color: white;
+  background-color: #FFD4E0;
   text-align: center;
   padding: 16px;
   font-family: inherit;
@@ -172,3 +54,4 @@ footer {
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
 }
+
